# opengl-glfw-glew

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
res/shaders/: Basic.glsl
src/: CMakeLists.txt  main.cpp
